--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,5 +1,5 @@
 name: BetterFurnaces
 description: Adds left-click functionality to furnaces based on item in hand
 author: daemitus
-main: betterfurnaces.BetterFurnaces
+main: com.daemitus.betterfurnaces.BetterFurnaces
 version: 1.0
