removed chat, switched mouse buttons and a lot more

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,5 +1,5 @@
 name: BetterFurnaces
 description: Adds left-click functionality to furnaces based on item in hand
-author: daemitus
+authors: [RedNifre, daemitus]
 main: com.daemitus.betterfurnaces.BetterFurnaces
-version: 1.0
+version: 1.1.0 (unofficial RedNifre fork)
